--- a/index.scss
+++ b/index.scss
@@ -2,6 +2,15 @@ body {
   background-color: $dark;
   font-size: 15px;
 }
+#app {
+  display: inline-block;
+  width: 200px;
+  height: 50px;
+  background-image: url('./public/imgs/logo.png');
+  background-size: cover;
+  background-position: center -10px;
+  background-repeat: no-repeat;
+}
 #home-page {
   width: 100%;
   height: 100%;
